styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');

:root {
    --primary-blue: #005CFF; /* Bright, energetic blue */
    --secondary-blue: #1F75FE; /* Lighter, subtle blue */
    --accent-blue: #3D91FF; /* A calm, cooler blue for accents */
    --dark-blue: #0A2D4C; /* Deep, dark blue for backgrounds */
    --light-grey: #F0F1F6; /* Soft, light grey for backgrounds and text */
    --dark-grey: #333333; /* Dark grey for text */
    --off-white: #FAFAFA; /* Very light, slightly warm white */
    --neutral-grey: #9E9E9E; /* Neutral grey for softer elements */
    --highlight: #FF5C8D; /* A subtle but vibrant accent color */
}

/* Font */
.lighter {
    color: var(--accent-blue);
    text-shadow: 1px 1px var(--light-grey);
}
.light {
    color: var(--off-white);
}
.sub-text {
    font-size: 14px;
}
.standout {
    color: var(--highlight);
    font-weight: 800;
}
* {
    box-sizing: border-box;
}

/* Body */
body {
    font-family: 'Exo 2', -apple-system, system-ui;
    font-weight: 300;
    /* presets */
    height: 100vh;
    padding: 0;
    margin: 0;
}
/* reusable containers */

header > .wrapper,
.hero > .wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    max-width: 800px;
    margin: 0 auto;
}
/* Header  */
header {
    /* design */
    background-color: var(--dark-blue);
    /* layout */
    display: flex;
    justify-content: space-around;
    padding: 16px;
}
.header-logo {
    color: var(--light-grey);
    font-size:28px;
    font-weight: 600;
}
.storm {
    color: var(--primary-blue);
    font-weight: 800;
}

/* Nav */
header ul {
    /* aesthetic */
    color: var(--off-white);
    /* animation */
    /* layout */
    display: flex;
    align-items: baseline;
    list-style: none;
    gap: 12px;
    /* reset */
    margin: 0;
    padding: 0;
}
header ul li:hover {
    transform: scale(1.2);
}
.active {
    /* text-shadow: 1px 1px var(--off-white); */
    color: var(--accent-blue);
    font-weight: 600;
}
.active:hover {
    transform: scale(1.1);
}

/* Hero */
img {
    border-radius: 8px;
    width: 360px;
    padding: 0;
    /* margin: 0 auto; */
    line-height: 0;
}
.hero * {
    /* border: 1px solid green; */
}
.hero {
    background-color: var(--dark-blue);
    /* layout */
    padding-bottom: 32px;
    display: flex;
}
.cta {
    flex: 0 1 300px;
    padding: 16px;
    gap: 12px;
}
.cta button {
    border: none;
    background-color: var(--secondary-blue);
    color: var(--off-white);
    padding: 8px 16px;
    border-radius: 6px;
    /* font */
    font-family: monospace;
    font-weight: 800;
}

